--- a/{{cookiecutter.project_dirname}}/.gitignore
+++ b/{{cookiecutter.project_dirname}}/.gitignore
@@ -18,24 +18,18 @@ junit.xml
 # production
 /build
 
-# macOS
-.DS_Store
-
 # misc
 .DS_Store
-*.pem
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.local
 
 # Terraform
 .terraform.lock*
@@ -48,3 +42,7 @@ terraform.tfvars
 
 # VisualStudioCode
 .vscode/
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
