--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -3,134 +3,66 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "audit:fix": "npm_config_yes=true npx yarn-audit-fix",
     "build": "next build",
-    "start": "node server.js",
-    "eslint": "npx eslint . --fix-dry-run",
-    "pact": "npx jest pact/contracts --detectOpenHandles",
-    "test": "npx jest --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --detectOpenHandles",
+    "ci:contract-test": "npx jest pact/contracts --color --detectOpenHandles --passWithNoTests",
     "ci:unit-test": "npx jest --color --detectOpenHandles --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --coverage --coverageDirectory ./coverage/tests --ci --reporters=default --reporters=jest-junit",
-    "ci:contract-test": "npx jest pact/contracts --color --detectOpenHandles --passWithNoTests"
+    "lint": "next lint",
+    "pact": "npx jest pact/contracts --detectOpenHandles",
+    "start": "node server.js",
+    "test": "npx jest --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --detectOpenHandles"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
-    "@sentry/nextjs": "^6.19.7",
-    "axios": "^0.27.2",
+    "@next/font": "^13.1.2",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@sentry/nextjs": "^7.31.1",
+    "axios": "^1.2.2",
     "basic-auth": "^2.0.1",
-    "express": "^4.18.0",
-    "next": "^12.1.5",
-    "next-redux-wrapper": "^7.0.5",
+    "express": "^4.18.2",
+    "next": "^13.1.2",
     "nookies": "^2.5.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-is": "^18.1.0",
-    "react-redux": "^8.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "styled-components": "^5.3.5",
+    "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@next/eslint-plugin-next": "^12.1.5",
-    "@pact-foundation/pact": "^9.17.3",
-    "@testing-library/dom": "^8.13.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^14.1.1",
-    "@types/basic-auth": "^1.1.3",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.30",
-    "@types/react": "^18.0.8",
-    "@types/react-redux": "^7.1.24",
-    "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "axios-mock-adapter": "^1.20.0",
-    "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "8.14.0",
-    "eslint-config-next": "^12.1.5",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "@next/eslint-plugin-next": "^13.1.2",
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/express": "^4.17.15",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "8.32.0",
+    "eslint-config-next": "^13.1.2",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "jest": "^28.0.3",
-    "jest-environment-jsdom": "^28.0.2",
-    "jest-junit": "^13.2.0",
-    "jest-pact": "^0.9.3",
-    "prettier": "^2.6.2",
-    "typescript": "^4.6.4",
-    "webpack": "^5.72.0"
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-security": "^1.6.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-junit": "^15.0.0",
+    "jest-pact": "^0.10.2",
+    "prettier": "^2.8.3",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0"
   },
-  "prettier": {
-    "arrowParens": "avoid",
-    "singleQuote": true,
-    "semi": false,
-    "jsxSingleQuote": true,
-    "trailingComma": "none",
-    "useTabs": false
-  },
-  "eslintConfig": {
-    "ignorePatterns": "*.js",
-    "parser": "@typescript-eslint/parser",
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    },
-    "parserOptions": {
-      "project": "./tsconfig.json",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "plugins": [
-      "@typescript-eslint",
-      "prettier"
-    ],
-    "extends": [
-      "eslint:recommended",
-      "next",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:react/recommended",
-      "prettier"
-    ],
-    "rules": {
-      "@typescript-eslint/explicit-module-boundary-types": "off",
-      "@typescript-eslint/no-unused-vars": [
-        "warn",
-        {
-          "argsIgnorePattern": "^_",
-          "varsIgnorePattern": "^_"
-        }
-      ],
-      "camelcase": [
-        2,
-        {
-          "properties": "always"
-        }
-      ],
-      "prettier/prettier": "error",
-      "react/no-unescaped-entities": 0,
-      "react/prop-types": 0
-    }
-  },
-  "jest": {
-    "testMatch": [
-      "**/__tests__/**/*.test.ts?(x)"
-    ],
-    "setupFilesAfterEnv": [
-      "./__tests__/setupTests.ts"
-    ],
-    "collectCoverageFrom": [
-      "components/**/*.{ts,tsx}",
-      "utils/hooks/*.{ts,tsx}",
-      "utils/*.{ts,tsx}"
-    ],
-    "moduleNameMapper": {
-      "@/(.*)$": "<rootDir>/$1"
-    }
+  "optionalDependencies": {
+    "@pact-foundation/pact": "^10.3.1",
+    "cypress": "^12.3.0"
   }
 }
