--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "audit:fix": "npm_config_yes=true npx yarn-audit-fix",
     "build": "next build",
-    "ci:contract-test": "npx jest pact/contracts --color --detectOpenHandles --passWithNoTests",
-    "ci:unit-test": "npx jest --color --detectOpenHandles --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --coverage --coverageDirectory ./coverage/tests --ci --reporters=default --reporters=jest-junit",
+    "ci:contract-test": "npx jest pact/contracts --testEnvironment=node --color --detectOpenHandles --passWithNoTests",
+    "ci:unit-test": "npx jest --color --silent --detectOpenHandles --testPathIgnorePatterns=pact/contracts --coverage --coverageDirectory ./coverage/tests --ci --reporters=default --reporters=jest-junit",    "e2e": "CYPRESS_BASE_URL=http://localhost:3000 cypress open",
     "lint": "next lint",
-    "pact": "npx jest pact/contracts --detectOpenHandles",
+    "pact": "npx jest pact/contracts --testEnvironment=node --detectOpenHandles",
     "start": "node server.js",
-    "test": "npx jest --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --detectOpenHandles"
+    "test": "npx jest --testPathIgnorePatterns=pact/contracts --detectOpenHandles"
   },
   "dependencies": {
     "@next/font": "^13.1.2",
