--- a/{{cookiecutter.project_dirname}}/tsconfig.json
+++ b/{{cookiecutter.project_dirname}}/tsconfig.json
@@ -6,34 +6,26 @@
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "isolatedModules": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
     "jsx": "preserve",
+    "lib": ["dom","dom.iterable","esnext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
+    "paths": {"@/*":["*"]},
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "target": "es5",
-    "paths": {
-      "@/*": [
-        "*"
-      ]
-    },
   },
   "include": [
-    "next-env.d.ts",
     "**/*.test.tsx",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "next-env.d.ts",
   ],
   "exclude": [
-    "node_modules",
     "*.js",
-    "cypress/**"
+    "cypress/**",
+    "node_modules"
   ]
 }
