--- a/{{cookiecutter.project_dirname}}/docker-compose.yaml
+++ b/{{cookiecutter.project_dirname}}/docker-compose.yaml
@@ -5,10 +5,10 @@ services:
   consumer:
     build:
       context: .
-      dockerfile: ${SERVICE_DOCKER_FILE:-docker/test.Dockerfile}
+      dockerfile: ${SERVICE_DOCKER_FILE:-docker/local.Dockerfile}
     environment:
       - INTERNAL_BACKEND_URL=${INTERNAL_BACKEND_URL:-http://provider:8000}
-      - NEXT_PUBLIC_PROJECT_URL=${NEXT_PUBLIC_PROJECT_URL:-https://proxy:8443}
+      - NEXT_PUBLIC_PROJECT_URL=${NEXT_PUBLIC_PROJECT_URL:-https://localhost:8443}
       - REACT_ENVIRONMENT=${REACT_ENVIRONMENT:-development}
     healthcheck:
       test: wget -O- -q http://localhost:3000/api/health/ || exit 1
