--- a/{{cookiecutter.project_dirname}}/docker-compose/volumes.yaml
+++ b/{{cookiecutter.project_dirname}}/docker-compose/volumes.yaml
@@ -4,5 +4,5 @@ services:
 
   consumer:
     volumes:
-      - ./:/app
+      - ../:/app
       - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
