Fix docker compose script and ci/cd

--- a/{{cookiecutter.project_dirname}}/.env_template
+++ b/{{cookiecutter.project_dirname}}/.env_template
@@ -1,4 +1,6 @@
-COMPOSE_FILE=docker-compose/consumer.yaml:docker-compose/volumes.yaml:docker-compose/services.yaml:docker-compose/provider.yaml
+COMPOSE_FILE=docker-compose.yaml:docker-compose/local.yaml
+COMPOSE_PROFILES=pact
+# CYPRESS_BASE_URL=https://proxy:8443
 # INTERNAL_BACKEND_URL=http://provider:8000
 # NEXT_PUBLIC_PROJECT_URL=https://localhost:8443
 # REACT_ENVIRONMENT=development
