--- a/{{cookiecutter.project_dirname}}/.env_template
+++ b/{{cookiecutter.project_dirname}}/.env_template
@@ -1,7 +1,13 @@
+# consumer
 COMPOSE_FILE=docker-compose.yaml:docker-compose/local.yaml
 COMPOSE_PROFILES=pact
-# CYPRESS_BASE_URL=https://proxy:8443
 # INTERNAL_BACKEND_URL=http://provider:8000
 # NEXT_PUBLIC_PROJECT_URL=https://localhost:8443
 # REACT_ENVIRONMENT=development
 # SERVICE_DOCKER_FILE=docker/local.Dockerfile
+# cypress
+# CYPRESS_BASE_URL=https://proxy:8443
+# user
+# GROUP_ID=1000
+# USER_ID=1000
+# USER=appuser
