--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -134,19 +134,20 @@ test:
     - docker:20-dind
   needs: []
   variables:
-    COMPOSE_FILE: docker-compose.yaml:docker-compose/local.yaml
+    COMPOSE_FILE: docker-compose.yaml:docker-compose/test.yaml
     COMPOSE_PROJECT_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}"
     SERVICE_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
     SERVICE_DOCKER_FILE: "docker/test.Dockerfile"
     SERVICE_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_{{ cookiecutter.service_slug }}"
     SERVICE_IMAGE_TAG: "${CI_JOB_NAME}-${CI_JOB_ID}"
   before_script:
-    - export COMPOSE_FILE=docker-compose/consumer.yaml:docker-compose/volumes.yaml
     - mkdir pacts
   script:
     - docker-compose build --quiet consumer
     - docker-compose run --name ${SERVICE_CONTAINER_NAME} consumer
   after_script:
+    - docker cp ${SERVICE_CONTAINER_NAME}:/app/coverage .
+    - docker cp ${SERVICE_CONTAINER_NAME}:/app/pacts .
     - docker-compose down --volumes --remove-orphans
   coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
   artifacts:
