--- a/{{cookiecutter.project_dirname}}/docker-compose/common.yaml
+++ b/{{cookiecutter.project_dirname}}/docker-compose/common.yaml
@@ -18,7 +18,7 @@ services:
   cypress:
     build:
       context: ../
-      dockerfile: docker/e2e.Dockerfile
+      dockerfile: docker/cypress.Dockerfile
       args:
         USER: ${USER:-appuser}
     container_name: cypress
