Add terraform fmt and validate in pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,3 +54,13 @@ repos:
     hooks:
       - id: pip-audit
         args: ["--require-hashes", "--requirement", "requirements/local.txt"]
+  - repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: "v1.77.0"
+    hooks:
+      - id: terraform_fmt
+      - id: terraform_validate
+        args:
+          - --tf-init-args=-backend=false
+          - --tf-init-args=-lock=false
+          - --tf-init-args=-upgrade
+          - --hook-config=--retry-once-with-cleanup=true
