TG-1008 Upgrade pip-audit to ~=2.6.0

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,7 +50,13 @@ repos:
       - id: mypy
         args: ["--no-site-packages"]
   - repo: https://github.com/trailofbits/pip-audit
-    rev: v2.4.13
+    rev: v2.6.3
     hooks:
       - id: pip-audit
-        args: ["--require-hashes", "--requirement", "requirements/local.txt"]
+        args:
+          [
+            "--require-hashes",
+            "--disable-pip",
+            "--requirement",
+            "requirements/local.txt",
+          ]
