--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,16 @@ ignore_missing_imports = true
     "D417",
     "E501",
  ]
- select = ["B", "C", "D", "E", "F", "I", "W", "B9"]
+ select = [
+    "B",
+    "C",
+    "D",
+    "E",
+    "F",
+    "I",
+    "W",
+    "B9"
+]
  target-version = "py312"
 
 [tool.ruff.isort]
