--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
     hooks:
       - id: black
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v4.0.0-alpha.8"
+    rev: "v3.1.0"
     hooks:
       - id: prettier
   - repo: https://github.com/charliermarsh/ruff-pre-commit
