--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -6,7 +6,7 @@
     "audit:fix": "npm_config_yes=true npx yarn-audit-fix",
     "build": "next build",
     "ci:contract-test": "npx jest pact/contracts --testEnvironment=node --color --detectOpenHandles --passWithNoTests",
-    "ci:unit-test": "npx jest --color --silent --detectOpenHandles --testPathIgnorePatterns=pact/contracts --coverage --coverageDirectory ./coverage/tests --ci --reporters=default --reporters=jest-junit",    "e2e": "CYPRESS_BASE_URL=http://localhost:3000 cypress open",
+    "ci:unit-test": "npx jest --color --silent --detectOpenHandles --testPathIgnorePatterns=pact/contracts --coverage --coverageDirectory ./coverage/tests --ci --reporters=default --reporters=jest-junit",
     "e2e": "CYPRESS_BASE_URL=https://localhost:8443 cypress open",
     "lint": "next lint",
     "pact": "npx jest pact/contracts --testEnvironment=node --detectOpenHandles",
@@ -14,56 +14,56 @@
     "test": "npx jest --testPathIgnorePatterns=pact/contracts --detectOpenHandles"
   },
   "dependencies": {
-    "@next/font": "^13.1.2",
-    "@reduxjs/toolkit": "^1.9.1",
+    "@next/font": "^14.0.4",
+    "@reduxjs/toolkit": "^2.0.1",
     "@sentry/nextjs": "^7.31.1",
     "axios": "^1.2.2",
     "basic-auth": "^2.0.1",
     "express": "^4.18.2",
-    "next": "^13.1.2",
+    "next": "^14.0.4",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "styled-components": "^5.3.6",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.8",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.1.2",
-    "@testing-library/dom": "^8.20.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@next/eslint-plugin-next": "^14.0.4",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.4.3",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.18",
+    "@types/node": "^20.11.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "eslint": "8.32.0",
-    "eslint-config-next": "^13.1.2",
-    "eslint-config-prettier": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
-    "eslint-plugin-security": "^1.6.0",
+    "eslint-plugin-security": "^2.1.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "jest-junit": "^15.0.0",
-    "jest-pact": "^0.10.2",
-    "prettier": "^2.8.3",
-    "typescript": "^4.9.4",
+    "jest-junit": "^16.0.0",
+    "jest-pact": "^0.11.0",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.75.0"
   },
   "optionalDependencies": {
-    "@pact-foundation/pact": "^10.3.1",
-    "cypress": "^12.3.0"
+    "@pact-foundation/pact": "^12.1.2",
+    "cypress": "^13.6.2"
   }
 }
