--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -14,56 +14,56 @@
     "test": "npx jest --testPathIgnorePatterns=pact/contracts --detectOpenHandles"
   },
   "dependencies": {
-    "@next/font": "^14.0.4",
-    "@reduxjs/toolkit": "^2.0.1",
-    "@sentry/nextjs": "^7.31.1",
-    "axios": "^1.2.2",
+    "@next/font": "^13.4.19",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@sentry/nextjs": "^7.64.0",
+    "axios": "^1.4.0",
     "basic-auth": "^2.0.1",
     "express": "^4.18.2",
-    "next": "^14.0.4",
+    "next": "^13.4.19",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "react-redux": "^9.0.4",
-    "redux": "^5.0.1",
-    "styled-components": "^6.1.8",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "styled-components": "^6.0.8",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.0.4",
-    "@testing-library/dom": "^9.3.4",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^14.1.2",
+    "@next/eslint-plugin-next": "^13.4.19",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/express": "^4.17.15",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.2.5",
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@types/react-redux": "^7.1.25",
+    "@types/node": "^20.5.3",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-redux": "^7.1.26",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
-    "eslint": "8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.27.5",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "^13.4.19",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.1",
-    "eslint-plugin-security": "^2.1.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-security": "^1.7.1",
+    "jest": "^29.6.3",
+    "jest-environment-jsdom": "^29.6.3",
     "jest-junit": "^16.0.0",
     "jest-pact": "^0.11.0",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.3",
-    "webpack": "^5.75.0"
+    "prettier": "^3.0.2",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.2"
   },
   "optionalDependencies": {
-    "@pact-foundation/pact": "^11.0.2",
-    "cypress": "^13.6.2"
+    "@pact-foundation/pact": "^10.3.1",
+    "cypress": "^12.3.0"
   }
 }
