--- a/{{cookiecutter.project_dirname}}/.eslintrc.json
+++ b/{{cookiecutter.project_dirname}}/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "ignorePatterns": "*.js",
+  "ignorePatterns": ["*.js", "*.mjs"],
   "parser": "@typescript-eslint/parser",
   "settings": {
     "react": {
@@ -26,16 +26,63 @@
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier",
-    "plugin:security/recommended"
+    "plugin:security/recommended-legacy"
   ],
   "rules": {
     "@typescript-eslint/consistent-type-imports": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-unused-vars": ["warn", {"argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }],
-    "camelcase": [2, {"properties": "always"}],
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
+    ],
+    "camelcase": [
+      2,
+      {
+        "properties": "always"
+      }
+    ],
     "prettier/prettier": "error",
     "react/no-unescaped-entities": 0,
     "react/prop-types": 0,
-    "security/detect-object-injection": 0
+    "security/detect-object-injection": 0,
+    "import/order": [
+      "warn",
+      {
+        "alphabetize": {
+          "caseInsensitive": true,
+          "order": "asc"
+        },
+        "groups": [
+          [
+            "builtin",
+            "external"
+          ],
+          "internal",
+          [
+            "parent",
+            "sibling",
+            "index"
+          ],
+          "object",
+          "type"
+        ],
+        "newlines-between": "always",
+        "pathGroups": [
+          {
+            "pattern": "@/components/**",
+            "group": "internal",
+            "position": "before"
+          },
+          {
+            "pattern": "@/utils/**",
+            "group": "internal",
+            "position": "after"
+          }
+        ]
+      }
+    ]
   }
 }
