--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -1,6 +1,6 @@
 {
   "name": "{{ cookiecutter.project_slug }}",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "audit:fix": "npm_config_yes=true npx yarn-audit-fix",
@@ -14,56 +14,50 @@
     "test": "npx jest --testPathIgnorePatterns=pact/contracts --detectOpenHandles"
   },
   "dependencies": {
-    "@next/font": "^13.4.19",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@sentry/nextjs": "^7.64.0",
-    "axios": "^1.4.0",
-    "basic-auth": "^2.0.1",
-    "express": "^4.18.2",
-    "next": "^13.4.19",
+    "@next/font": "^14.1.4",
+    "@sentry/nextjs": "^7.109.0",
+    "axios": "^1.6.8",
+    "jest-styled-components": "^7.2.0",
+    "next": "14.1.4",
+    "nextjs-progressbar": "^0.0.16",
     "nookies": "^2.5.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "redux": "^4.2.1",
-    "styled-components": "^6.0.8",
-    "styled-normalize": "^8.0.7"
+    "react": "^18",
+    "react-dom": "^18",
+    "styled-components": "^6.1.8",
+    "styled-normalize": "^8.1.1"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.4.19",
-    "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.2.5",
-    "@types/node": "^20.5.3",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-redux": "^7.1.26",
-    "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.48.0",
-    "eslint-config-next": "^13.4.19",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.1",
+    "@next/eslint-plugin-next": "^14.1.3",
+    "@pact-foundation/pact": "^12.3.0",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.0",
+    "@types/mime": "^4.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-security": "^1.7.1",
-    "jest": "^29.6.3",
-    "jest-environment-jsdom": "^29.6.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-security": "^2.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
     "jest-pact": "^0.11.0",
-    "prettier": "^3.0.2",
-    "typescript": "^5.1.6",
-    "webpack": "^5.88.2"
+    "prettier": "^3.2.5",
+    "typescript": "^5"
   },
   "optionalDependencies": {
-    "@pact-foundation/pact": "^11.0.2",
-    "cypress": "^12.17.4"
+    "cypress": "^13.7.0"
   }
 }
